# An1mated

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md
default/readers/: lua.lua
default/writers/: lua.lua
include/An1mated/: animationdocument.hpp  animationeditor.hpp  animationframewidget.hpp  animationpreview.hpp  document.hpp  documentmanager.hpp  editor.hpp  frameeditdialog.hpp  frameeditview.hpp  framesgallery.hpp  mainwindow.hpp  movablerect.hpp  newanimationdialog.hpp
include/libAn1mated/: Animation.hpp  animation.hpp  animationframe.hpp  animationreader.hpp  animationwriter.hpp  jsoncast.hpp  jsoncast.inl  stringcast.hpp
src/An1mated/: animationdocument.cpp  animationeditor.cpp  animationeditor.ui  animationframewidget.cpp  animationpreview.cpp  document.cpp  documentmanager.cpp  frameeditdialog.cpp  frameeditdialog.ui  frameeditview.cpp  frameeditview.h  framesgallery.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  movablerect.cpp  newanimationdialog.cpp  newanimationdialog.ui
src/libAn1mated/: animation.cpp  animationframe.cpp
tests/: test_animation.cpp  test_animationreading.cpp
